[CLEAN] Remove junk

--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,9 @@
   "description": "Telenor Music API",
   "main": "app.js",
   "license": "ISC",
+  "scripts": {
+    "start": "node src/app.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
